--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "module": "dist/es/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:basic": "ts-node examples/basic",
-    "test:remote": "ts-node examples/remote",
-    "test:unequal": "ts-node examples/unequal",
-    "test:size": "ts-node examples/size",
-    "test:coord": "ts-node examples/coord",
-    "test:export": "ts-node examples/export",
+    "test": "jest",
+    "demo:basic": "ts-node examples/basic",
+    "demo:remote": "ts-node examples/remote",
+    "demo:unequal": "ts-node examples/unequal",
+    "demo:size": "ts-node examples/size",
+    "demo:coord": "ts-node examples/coord",
+    "demo:export": "ts-node examples/export",
     "build": "npm run build:es && npm run build:cjs && npm run build:types",
     "build:es": "rm -rf dist/es && tsc --outDir dist/es -p tsconfig.build.json -m esnext",
     "build:cjs": "rm -rf dist/cjs && tsc --outDir dist/cjs -p tsconfig.build.json",
@@ -21,7 +21,7 @@
     "lint:fix": "npm run lint:js -- --fix",
     "prettier": "prettier --write **/*",
     "prepare": "husky install",
-    "postpublish": "npm run build"
+    "prepublishOnly": "npm test && npm run build"
   },
   "files": [
     "dist",
@@ -49,14 +49,17 @@
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@types/jest": "^29.5.7",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.52.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
