--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "prepublishOnly": "npm test && npm run build"
   },
   "files": [
-    "dist",
-    "docs"
+    "dist"
   ],
   "lint-staged": {
     "**/*.{js,mjs,jsx,ts,tsx}": "eslint",
