--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "image-size": "^1.0.2",
+    "node-useful": "^0.0.1",
     "pureimage": "^0.4.13"
   },
   "devDependencies": {
