--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-puzzle",
   "version": "1.0.1",
   "description": "Node.js 生成滑块验证码的拼图和背景图。",
-  "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
-  "types": "dist/types/index.d.ts",
+  "main": "dist/node-puzzle.cjs.js",
+  "module": "dist/node-puzzle.esm.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "test": "jest",
     "demo:basic": "ts-node examples/basic",
@@ -13,10 +13,10 @@
     "demo:size": "ts-node examples/size",
     "demo:coord": "ts-node examples/coord",
     "demo:export": "ts-node examples/export",
-    "build": "npm run build:es && npm run build:cjs && npm run build:types",
-    "build:es": "rm -rf dist/es && tsc --outDir dist/es -p tsconfig.build.json -m esnext",
-    "build:cjs": "rm -rf dist/cjs && tsc --outDir dist/cjs -p tsconfig.build.json",
-    "build:types": "rm -rf dist/types && tsc --outDir dist/types -p tsconfig.build.json -d --emitDeclarationOnly",
+    "demo:mjs": "node examples/mjs/index.mjs",
+    "build": "rm -rf dist && npm run build:module && npm run build:types",
+    "build:module": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build:types": "rm -rf types && tsc --outDir types -p tsconfig.build.json -d --emitDeclarationOnly",
     "lint": "eslint --ext .js,.mjs,.jsx,.ts,.tsx src",
     "lint:fix": "npm run lint:js -- --fix",
     "prettier": "prettier --write **/*",
@@ -24,7 +24,8 @@
     "prepublishOnly": "npm test && npm run build"
   },
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "lint-staged": {
     "**/*.{js,mjs,jsx,ts,tsx}": "eslint",
@@ -63,6 +64,9 @@
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/jest": "^29.5.7",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -73,6 +77,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
+    "rollup": "^4.8.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
