--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint --ext .js,.mjs,.jsx,.ts,.tsx src",
     "lint:fix": "npm run lint:js -- --fix",
     "prettier": "prettier --write **/*",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublishOnly": "npm test && npm run build"
   },
   "files": [
@@ -33,7 +33,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "@commitlint/cz-commitlint"
     }
   },
   "keywords": [
@@ -62,24 +62,26 @@
     "pureimage": "^0.4.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cz-commitlint": "^19.2.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/jest": "^29.5.7",
-    "@types/node": "^20.8.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.52.0",
-    "husky": "^8.0.0",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "commitizen": "^4.3.0",
+    "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "inquirer": "9",
     "jest": "^29.7.0",
-    "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
-    "rollup": "^4.8.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "rollup": "^4.13.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   }
 }
