--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "types/index.d.ts",
   "scripts": {
     "test": "jest",
+    "demos": "npm run demo:basic && npm run demo:remote && npm run demo:unequal && npm run demo:size && npm run demo:coord && npm run demo:export && npm run demo:mjs",
     "demo:basic": "ts-node examples/basic",
     "demo:remote": "ts-node examples/remote",
     "demo:unequal": "ts-node examples/unequal",
@@ -57,31 +58,33 @@
     "node": ">=14.19.0"
   },
   "dependencies": {
-    "image-size": "^1.0.2",
+    "create-puzzle": "^3.0.2",
+    "image-size": "^1.1.1",
     "node-useful": "^0.0.1",
-    "pureimage": "^0.4.13"
+    "pureimage": "^0.4.13",
+    "ut2": "^1.10.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@types/node": "^20.14.10",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "commitizen": "^4.3.0",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
-    "inquirer": "9",
+    "inquirer": "^9.3.5",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "rollup": "^4.13.0",
-    "ts-jest": "^29.1.2",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "rollup": "^4.18.0",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.5.3"
   }
 }
