--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:fix": "npm run lint:js -- --fix",
     "prettier": "prettier --write **/*",
     "prepare": "husky",
-    "prepublishOnly": "npm test && npm run build"
+    "prepublishOnly": "npm test && npm run build",
+    "tsc": "tsc --noEmit"
   },
   "files": [
     "dist",
@@ -59,33 +60,33 @@
   },
   "dependencies": {
     "create-puzzle": "^3.0.2",
-    "image-size": "^1.1.1",
+    "image-size": "^1.2.0",
     "node-useful": "^0.0.1",
-    "pureimage": "^0.4.13",
-    "ut2": "^1.10.0"
+    "pureimage": "^0.4.18",
+    "ut2": "^1.16.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/cz-commitlint": "^19.2.0",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/cz-commitlint": "^19.6.1",
     "@rollup/plugin-commonjs": "^25.0.8",
-    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "commitizen": "^4.3.0",
-    "eslint": "^8.57.0",
-    "husky": "^9.0.11",
-    "inquirer": "^9.3.5",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.16",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "commitizen": "^4.3.1",
+    "eslint": "^8.57.1",
+    "husky": "^9.1.7",
+    "inquirer": "^9.3.7",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "rollup": "^4.18.0",
-    "ts-jest": "^29.1.5",
+    "lint-staged": "^15.4.2",
+    "prettier": "^3.4.2",
+    "rollup": "^4.32.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.7.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
