--- a/package.json
+++ b/package.json
@@ -59,10 +59,8 @@
     "node": ">=14.19.0"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.65",
     "create-puzzle": "^3.0.2",
-    "image-size": "^1.2.0",
-    "node-useful": "^0.0.1",
-    "pureimage": "^0.4.18",
     "ut2": "^1.16.0"
   },
   "devDependencies": {
@@ -72,12 +70,14 @@
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.16",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "commitizen": "^4.3.1",
     "eslint": "^8.57.1",
+    "fs-extra": "^11.3.0",
     "husky": "^9.1.7",
     "inquirer": "^9.3.7",
     "jest": "^29.7.0",
