--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "node": ">=14.19.0"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.65",
+    "@napi-rs/canvas": "0.1.65",
     "create-puzzle": "^3.0.2",
     "ut2": "^1.16.0"
   },
@@ -90,5 +90,6 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "resolutions": {}
 }
