chore: update eslint v9

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "rm -rf dist && npm run build:module && npm run build:types",
     "build:module": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "build:types": "rm -rf types && tsc --outDir types -p tsconfig.build.json -d --emitDeclarationOnly",
-    "lint": "eslint --ext .js,.mjs,.jsx,.ts,.tsx src",
+    "lint": "eslint .",
     "lint:fix": "npm run lint:js -- --fix",
     "prettier": "prettier --write **/*",
     "prepare": "husky",
@@ -67,17 +67,17 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
+    "@eslint/js": "^9.32.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.9",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "commitizen": "^4.3.1",
-    "eslint": "^8.57.1",
+    "eslint": "^9.32.0",
     "fs-extra": "^11.3.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "lint-staged": "^15.5.2",
@@ -85,7 +85,8 @@
     "rollup": "^4.46.0",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
